<resources>
    <string name="app_name">JournalApp</string>
    <string name="save_button">Save Post</string>
    <string name="thoughts">Thoughts</string>
    <string name="post_title">Post Title</string>
    <string name="post_date">Post Date</string>
    <string name="no_posts_available">No posts available</string>
    <string name="add_journal">Add Journal</string>
    <string name="signout">Sign Out</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
</resources>